# eze-snyk-plugin

./: .ezerc.toml  .gitignore  LICENSE.md  Makefile  PLUGINS_DEVELOPMENT.md  README.md  azure-pipelines.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: __init__.py  plugin.py  snyk.py
tests/: test_plugin.py  test_snyk.py
tests/__fixtures__/: raw-snyk-container-report.json  raw-snyk-iac-report.json  raw-snyk-node-report.json  raw-snyk-python-report.json  raw-snyk-report.sarif
tests/__snapshots__/: snyk-container-help_text.txt  snyk-help_text.txt  snyk-iac-help_text.txt  snyk-node-output.json
tests/snapshots/test_snyk/test_help_text_fields/: snyk-container-help_text.txt  snyk-iac-help_text.txt
tests/snapshots/test_snyk/test_parse_report__python_snapshot/: snyk-python-output.json
tests/snapshots/test_snyk/test_parse_report__snapshot/: snyk-container-result-output.json  snyk-iac-result-output.json
