; Python CFG Spec
; https://docs.python.org/3/distutils/configfile.html
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = eze-snyk-plugin
author = RiverSafe,
author_email = anthony.mckale@riversafe.co.uk,

url = https://github.com/RiverSafeUK/eze-snyk-plugin

description = Snyk plugin based on Snyk tool for integration with Eze
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT license"

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Testing
    Topic :: Security
    Topic :: Utilities
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    eze
    eze-cli

project_urls =
    Homepage=https://github.com/RiverSafeUK/eze-snyk-plugin
    Source=https://github.com/RiverSafeUK/eze-snyk-plugin

[options]
python_requires = >=3.7
include_package_data = True

[options.entry_points]
eze.plugins =
    eze = eze-snyk-plugin=src.plugin